# tutoria-ia-2.0

./: .gitignore
aula 1 - agentes de ia/ai-app-intro/src/: main.py
aula 2 - Lendo Documentos/: slide_aula_2.excalidraw
aula 2 - Lendo Documentos/llm-owasp-agent/: README.md  graph_20260128_210013.mmd  graph_20260128_210142.mmd  pyproject.toml
aula 2 - Lendo Documentos/llm-owasp-agent/assets/: output.md
aula 2 - Lendo Documentos/llm-owasp-agent/faiss_index/: index.faiss  index.pkl
aula 2 - Lendo Documentos/llm-owasp-agent/src/: chunking.py  graph.py  ingestion.py  main.py  retrieval.py  tools.py  vectorstore.py
aula 3 - Rag Deep Dive/: rag-deep-dive.excalidraw
aula 4 - Rag Server/: HOMEWORK.md
aula 4 - Rag Server/agent/: README.md  pyproject.toml
aula 4 - Rag Server/agent/src/: main.py
aula 4 - Rag Server/agent/src/ai/: graph.py  prompt.py  tools.py
aula 4 - Rag Server/agent/src/client/: http.py
aula 4 - Rag Server/agent/src/controller/: route.py
aula 4 - Rag Server/agent/src/service/: qa.py
aula 4 - Rag Server/front/: README.md  index.html
aula 4 - Rag Server/front/src/: index.css
aula 4 - Rag Server/front/src/components/: Chat.tsx  ChatMessage.tsx  Toast.tsx
aula 4 - Rag Server/front/src/model/: chat.ts
aula 4 - Rag Server/rag/: README.md  docker-compose.yml  pyproject.toml
aula 4 - Rag Server/rag/src/: instances.py  main.py
aula 4 - Rag Server/rag/src/api/: routes.py
aula 4 - Rag Server/rag/src/assets/: Filmes para assistir.md  Rotina de Treino.md
aula 4 - Rag Server/rag/src/ingestion/: chunker.py  filters.py  loaders.py  pipeline.py  transformers.py  utils.py
aula 4 - Rag Server/rag/src/services/: ingestion.py  retrieval.py
aula 4 - Rag Server/rag/src/vectorstore/: connection.py  persistence.py  reset.py
aula 5 - Design de Sistemas Agenticos/: Tutoria de IA 2 0 Design de Agentes.excalidraw
