[project]
name = "llm-owasp-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Vieira Salgado",email = "vieira4ev@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "rich (>=14.3.1,<15.0.0)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "docling (>=2.70.0,<3.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)"
]

[tool.poetry]
packages = [{include = "llm_owasp_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
